--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,8 @@
 {
-    "version": 2,
-    "builds": [
+    "rewrites": [
       {
-        "src": "src/client.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "src/client.js"
+        "source": "/(.*)",
+        "destination": "/"
       }
     ]
   }
